@@ -28,6 +28,7 @@ BUGFIXES:
     (Credits to David R. Weise)
   * StrExtractBetween() would have rejected to extract parts between two identical
     characters.
+  * Quantile(), and in consequence Median(), would not have treated missings correctly.  
 
 
 
